# news-thesis-impact-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
demo/: gallery.html  impact_packet.json  impact_packet.md
demo/bundle/: bundle_copy_list.json  bundle_manifest.html  bundle_manifest.json  bundle_manifest.md
demo/bundle/artifacts/: CHANGELOG.md  README.md  pyproject.toml
demo/bundle/artifacts/demo/: gallery.html  index.html
demo/bundle/artifacts/docs/: review-packet.md
demo/bundle/artifacts/examples/: portfolio.json  scenarios.json  (+1 more)
demo/compare/: compare.json  compare.md
demo/evidence/: evidence_hub.html  evidence_hub.json  evidence_hub.md
demo/health/: asset_health.json  asset_health.md
demo/journal/: decision_journal.json
demo/ledger/: review_ledger.html  review_ledger.json  review_ledger.md
demo/maturity/: maturity_report.json  maturity_report.md
demo/scenario/: scenario_stress.json
demo/trend/: trend_history.html  trend_history.md
demo/visual/: visual_receipt.json  visual_receipt.md
demo/walkthrough/: walkthrough.json  walkthrough.md
docs/: cold-user-walkthrough.md  review-packet.md
examples/: events.json  previous_packet.json  theses.json
examples/history/: 2026-07-10_packet.json
release/: manifest.json  manifest.md
scripts/: privacy_scan.py  selfcheck.py
skills/agent/news-thesis-impact-lab/: SKILL.md
src/news_thesis_impact_lab/: __init__.py  asset.py  cli.py  engine.py  evidence.py  journal.py  ledger.py  maturity.py  model.py  promotion.py  release.py  render.py  scenario.py  trend.py
tests/: test_cli.py
(+19 files in other folders)
