[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "news-thesis-impact-lab"
version = "0.6.0"
description = "Zero-dependency local CLI for mapping static news catalysts to finance thesis review packets."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "news-thesis-impact-lab maintainers"}]
keywords = ["finance", "research", "markdown", "portfolio", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.scripts]
news-thesis-impact-lab = "news_thesis_impact_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
